[gd_scene load_steps=2 format=3 uid="uid://song_properties_dialog_001"]

[ext_resource type="Script" uid="uid://song_properties_dialog_script_001" path="res://Scripts/Editor/song_properties_dialog.gd" id="1"]

[node name="SongPropertiesDialog" type="AcceptDialog"]
title = "Song Properties"
initial_position = 1
size = Vector2i(500, 450)
ok_button_text = "Save"
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 401.0
theme_override_constants/separation = 8

[node name="SongNameContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/SongNameContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Song Name:"

[node name="SongNameEdit" type="LineEdit" parent="VBox/SongNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter song name"

[node name="ArtistContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/ArtistContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Artist:"

[node name="ArtistEdit" type="LineEdit" parent="VBox/ArtistContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter artist name"

[node name="CharterContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/CharterContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Charter:"

[node name="CharterEdit" type="LineEdit" parent="VBox/CharterContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter charter name"

[node name="AlbumContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/AlbumContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Album:"

[node name="AlbumEdit" type="LineEdit" parent="VBox/AlbumContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter album name"

[node name="YearContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/YearContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Year:"

[node name="YearEdit" type="LineEdit" parent="VBox/YearContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "YYYY"

[node name="GenreContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/GenreContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Genre:"

[node name="GenreEdit" type="LineEdit" parent="VBox/GenreContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter genre"

[node name="OffsetContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/OffsetContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Offset (seconds):"

[node name="OffsetSpin" type="SpinBox" parent="VBox/OffsetContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -10.0
max_value = 10.0
step = 0.001
value = 0.0

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Audio File:"
theme_override_font_sizes/font_size = 14

[node name="AudioContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AudioPathEdit" type="LineEdit" parent="VBox/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false
placeholder_text = "No audio file selected"

[node name="BrowseButton" type="Button" parent="VBox/AudioContainer"]
layout_mode = 2
text = "Browse..."

[node name="FileDialog" type="FileDialog" parent="."]
title = "Select Audio File"
initial_position = 1
size = Vector2i(800, 600)
ok_button_text = "Select"
file_mode = 0
access = 2
filters = PackedStringArray("*.ogg, *.mp3, *.wav ; Audio Files")
